--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MsmGrainGrowthGui"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Grain Growth Cellural Automata" Height="450" Width="800">
     <Grid>
-        <DockPanel>
+        <!--        <DockPanel>
             <ToolBarTray DockPanel.Dock="Top">
                 <ToolBar>
                     <Button Command="New" Content="New" />
@@ -15,12 +15,14 @@
                     <Button Command="Save" Content="Save" />
                 </ToolBar>
                 <ToolBar>
-                    <Button Command="ExportCSV" Content="Export to CSV" />
-                    <Button Command="Saveimage" Content="Save image" />
+                    <Button Content="Export to CSV" />
+                    <Button Content="Save image" />
                 </ToolBar>
             </ToolBarTray>
             <TextBox AcceptsReturn="True" />
         </DockPanel>
+        -->
+        
 
 
     </Grid>
