--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MsmGrainGrowthGui"
         mc:Ignorable="d"
-        Title="Grain Growth Cellural Automata" Height="450" Width="800">
+        Title="Grain Growth Cellural Automata" Height="595" Width="800">
 
     <StackPanel>
         <DockPanel>
@@ -39,14 +39,13 @@
                     </Button>
                 </ToolBar>
             </ToolBarTray>
-            <TextBox AcceptsReturn="True" />
         </DockPanel>
     <Grid>
         <Grid.ColumnDefinitions>
 			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="1*" />
 		</Grid.ColumnDefinitions>
-		<Image Grid.Column="0"></Image>
+		<Image Grid.Column="0" Height="500" Width="500" Margin="5"></Image>
         <StackPanel Grid.Column="1">
             <Label Content="Boundary" />
             <ComboBox Margin="5">
@@ -67,8 +66,9 @@
             <Button Margin="5" Padding="5" >Next Step</Button>
             <Button Margin="5" Padding="5" >Run</Button>
             <Button Margin="5" Padding="5" >Stop</Button>
-           
-        </StackPanel>
+            <Button Margin="5" Padding="5" >Reset</Button>
+
+            </StackPanel>
     </Grid>
 
     </StackPanel>
