--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -13,14 +13,14 @@
                 <ToolBar>
                     <Button Command="Open">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="/icons/excel.png" />
+                            <Image Source="/icons/folder.png" />
                             <TextBlock Margin="5,0">Open</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Padding="5">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="/icons/diskette.png" />
-                            <TextBlock Margin="5,0">Save</TextBlock>
+                            <TextBlock Margin="5,0">Save As</TextBlock>
                         </StackPanel>
                     </Button>
                 </ToolBar>
@@ -45,8 +45,10 @@
 			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="1*" />
 		</Grid.ColumnDefinitions>
-		<Image Grid.Column="0" Height="500" Width="500" Margin="5"></Image>
-        <StackPanel Grid.Column="1">
+            <Border BorderThickness="1" BorderBrush="#FF000000">
+                <Image Name="CelluralSpaceView" Grid.Column="0" Height="500" Width="500" Margin="5" ></Image>
+            </Border>
+            <StackPanel Grid.Column="1">
             <Label Content="Boundary" />
             <ComboBox Margin="5">
                 <ComboBoxItem IsSelected="True">Absorbing</ComboBoxItem>
@@ -62,7 +64,7 @@
             </ComboBox>
             <Label Content="Colors" />
             <TextBox Margin="5" Text="3"/>
-            <Button Margin="5" Padding="5" >Randomize</Button>
+            <Button Margin="5" Padding="5" Click="Button_Click">Randomize</Button>
             <Button Margin="5" Padding="5" >Next Step</Button>
             <Button Margin="5" Padding="5" >Run</Button>
             <Button Margin="5" Padding="5" >Stop</Button>
