--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -66,11 +66,21 @@
                     <ComboBoxItem>Hexagonal</ComboBoxItem>
                 </ComboBox>
             <Label Content="Grains" />
-            <TextBox Name="Grains_TextBox" Margin="5" Text="{Binding GrainsCount}"/>
+            <TextBox Name="Grains_TextBox" Margin="5" Text="{Binding GrainCount}"/>
             <Label Content="Space size" />
             <TextBox Name="SpaceSize_TextBox" Margin="5" Text="{Binding SpaceSize}" />
             <!--<Button Margin="5" Padding="5" >Randomize</Button>-->
-            <Button Margin="5" Padding="5" Click="NextButton_Click" Name="NextSpaceView">Next Step</Button>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="2.6*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Margin="5"  Click="NextButton_Click" Name="NextSpaceView">Next</Button>
+                    <TextBlock Grid.Column="1" Padding="5,5,5,5" TextWrapping="Wrap" >Steps per click :</TextBlock>
+                    <TextBox Grid.Column="2" Name="StepsPerClick_TextBox" Margin="0,5,5,5" Text="{Binding StepsPerClick}"></TextBox>
+                </Grid>
+            
             <!--<Button Margin="5" Padding="5" Name="RunButton">Run</Button>-->
             <!--<Button Margin="5" Padding="5" >Stop</Button>-->
             <Button Margin="5" Padding="5" Click="ResetButton_Click">Reset</Button>
