--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -6,9 +6,14 @@
         xmlns:local="clr-namespace:MsmGrainGrowthGui"
         mc:Ignorable="d"
         Title="Grain Growth Cellural Automata" Height="700" Width="800">
+    
+    <Window.DataContext>
+        <local:SongViewModel />
+    </Window.DataContext>
 
     <StackPanel>
         <DockPanel>
+        <!-- Send toolbar to seperate view/viewModel -->>
             <ToolBarTray DockPanel.Dock="Top">
                 <ToolBar>
                     <Button IsEnabled="False">
@@ -56,10 +61,9 @@
 
                 <GroupBox Header="Inclusions">
                     <StackPanel>
-                        <CheckBox Margin="5">Enabled</CheckBox>
-                        <StackPanel Visibility="Visible">
+                        <CheckBox Name="Inclusions_CheckBox" Margin="5">Enabled</CheckBox>
+                        <StackPanel Name="Inclusions_StackPanel" Visibility="Visible">
                             <Label Content="Radius"></Label>
-
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1*" />
@@ -68,9 +72,9 @@
                                     <ColumnDefinition Width="1*" />
                                 </Grid.ColumnDefinitions>
                                 <Label Grid.Column="0" Content="Min:" />
-                                <TextBox Grid.Column="1" Margin="5,5,5,5">1</TextBox>
+                                <TextBox Name="MinRadius_TextBox" Grid.Column="1" Margin="5,5,5,5" Text="{Binding MinRadius}" />>
                                 <Label Grid.Column="2" Content="Max:" />
-                                <TextBox Grid.Column="3" Margin="5">3</TextBox>
+                                <TextBox Name="MaxRadius_TextBox" Grid.Column="3" Margin="5" Text="{Binding MaxRadius}"/>
                             </Grid>
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -79,19 +83,19 @@
                                     <ColumnDefinition Width="1.6*" />
                                 </Grid.ColumnDefinitions>
                                 <Label Grid.Column="0" Content="Count:"></Label>
-                                <TextBox Grid.Column="1" Margin="5,5,5,5">10</TextBox>
+                                <TextBox Name="InclusionsCount_TextBox" Grid.Column="1" Margin="5,5,5,5" Text="{Binding InclusionsCount}" />
                             </Grid>
                         </StackPanel>
                     </StackPanel>
                 </GroupBox>
 
                 <Label Content="Boundary" />
-                <ComboBox Margin="5">
+                <ComboBox Name="Boundary_ComboBox" Margin="5"> <!-- How to ComboBox binding ?-->
                     <ComboBoxItem IsSelected="True">Absorbing</ComboBoxItem>
                     <ComboBoxItem>Periodic</ComboBoxItem>
                 </ComboBox>
                 <Label Content="Neighborhood" />
-                <ComboBox Margin="5">
+                <ComboBox Name="Neighbourhood_ComboBox" Margin="5">
                     <ComboBoxItem IsSelected="True">von Neumann</ComboBoxItem>
                     <ComboBoxItem>Moore</ComboBoxItem>
                     <ComboBoxItem>Pentagonal</ComboBoxItem>
@@ -101,21 +105,11 @@
                 <TextBox Name="Grains_TextBox" Margin="5" Text="{Binding GrainCount}"/>
                 <Label Content="Space size" />
                 <TextBox Name="SpaceSize_TextBox" Margin="5" Text="{Binding SpaceSize}" />
-                <!--<Button Margin="5" Padding="5" >Randomize</Button>-->
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="2.8*" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Margin="5"  Click="NextButton_Click" Name="NextSpaceView">Next</Button>
-                    <TextBlock Grid.Column="1" Padding="5,5,5,5" TextWrapping="Wrap">Steps per click :</TextBlock>
-                    <TextBox Grid.Column="2" Name="StepsPerClick_TextBox" Margin="0,5,5,5" Text="{Binding StepsPerClick}"></TextBox>
-                </Grid>
-
+                <Button Name="NextButton" Grid.Column="0" Margin="5"  Command="{Binding Generate}" >Generate</Button>
+                <Button Name="NextButton" Grid.Column="0" Margin="5"  Command="{Binding Next}" >Next</Button>
                 <!--<Button Margin="5" Padding="5" Name="RunButton">Run</Button>-->
                 <!--<Button Margin="5" Padding="5" >Stop</Button>-->
-                <Button Margin="5" Padding="5" Click="ResetButton_Click">Reset</Button>
+                <!--<Button Margin="5" Padding="5" Command="{Binding Reset}">Reset</Button>-->
 
             </StackPanel>
         </Grid>
