--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -1,19 +1,19 @@
-﻿<Window x:Class="MsmGrainGrowthGui.MainWindow"
+﻿<Window x:Class="GrainGrowthGui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MsmGrainGrowthGui"
+        xmlns:local="clr-namespace:GrainGrowthGui"
         mc:Ignorable="d"
         Title="Grain Growth Cellural Automata" Height="700" Width="800">
     
     <Window.DataContext>
-        <local:SongViewModel />
+        <local:CelluralAutomatonViewModel />
     </Window.DataContext>
 
     <StackPanel>
         <DockPanel>
-        <!-- Send toolbar to seperate view/viewModel -->>
+        <!-- Send toolbar to seperate view/viewModel -->
             <ToolBarTray DockPanel.Dock="Top">
                 <ToolBar>
                     <Button IsEnabled="False">
@@ -62,30 +62,30 @@
                 <GroupBox Header="Inclusions">
                     <StackPanel>
                         <CheckBox Name="Inclusions_CheckBox" Margin="5">Enabled</CheckBox>
-                        <StackPanel Name="Inclusions_StackPanel" Visibility="Visible">
-                            <Label Content="Radius"></Label>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="1*" />
-                                    <ColumnDefinition Width="1*" />
-                                    <ColumnDefinition Width="1*" />
-                                    <ColumnDefinition Width="1*" />
-                                </Grid.ColumnDefinitions>
-                                <Label Grid.Column="0" Content="Min:" />
-                                <TextBox Name="MinRadius_TextBox" Grid.Column="1" Margin="5,5,5,5" Text="{Binding MinRadius}" />>
-                                <Label Grid.Column="2" Content="Max:" />
-                                <TextBox Name="MaxRadius_TextBox" Grid.Column="3" Margin="5" Text="{Binding MaxRadius}"/>
-                            </Grid>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="0.9*" />
-                                    <ColumnDefinition Width="1*" />
-                                    <ColumnDefinition Width="1.6*" />
-                                </Grid.ColumnDefinitions>
-                                <Label Grid.Column="0" Content="Count:"></Label>
-                                <TextBox Name="InclusionsCount_TextBox" Grid.Column="1" Margin="5,5,5,5" Text="{Binding InclusionsCount}" />
-                            </Grid>
-                        </StackPanel>
+                        <StackPanel Name="Inclusions_StackPanel" Visibility="Visible"/>
+                        <Label Content="Radius"></Label>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Content="Min:" />
+                            <TextBox Name="MinRadius_TextBox" Grid.Column="1" Margin="5,5,5,5" Text="{Binding MinRadius}" /> 
+                            <Label Grid.Column="2" Content="Max:" />
+                            <TextBox Name="MaxRadius_TextBox" Grid.Column="3" Margin="5" Text="{Binding MaxRadius}"/>
+                        </Grid>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.9*" />
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1.6*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Content="Count:"></Label>
+                            <TextBox Name="InclusionsCount_TextBox" Grid.Column="1" Margin="5,5,5,5" Text="{Binding InclusionsCount}" />
+                        </Grid>
+
                     </StackPanel>
                 </GroupBox>
 
@@ -105,7 +105,7 @@
                 <TextBox Name="Grains_TextBox" Margin="5" Text="{Binding GrainCount}"/>
                 <Label Content="Space size" />
                 <TextBox Name="SpaceSize_TextBox" Margin="5" Text="{Binding SpaceSize}" />
-                <Button Name="NextButton" Grid.Column="0" Margin="5"  Command="{Binding Generate}" >Generate</Button>
+                <Button Name="GenerateButton" Grid.Column="0" Margin="5"  Command="{Binding Generate}" >Generate</Button>
                 <Button Name="NextButton" Grid.Column="0" Margin="5"  Command="{Binding Next}" >Next</Button>
                 <!--<Button Margin="5" Padding="5" Name="RunButton">Run</Button>-->
                 <!--<Button Margin="5" Padding="5" >Stop</Button>-->
