--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -52,7 +52,7 @@
             </Grid.ColumnDefinitions>
             <StackPanel>
                 <Border BorderThickness="1" BorderBrush="#FF000000">
-                    <Image Name="CelluralSpaceView" Grid.Column="0" Height="500" Width="500" Margin="5" ></Image>
+                    <Image Name="CelluralSpaceView" Grid.Column="0" Height="500" Width="500" Margin="5" Source="{Binding ImageSource}" ></Image>
                 </Border>
                 <Label Margin="5" Name="StepLabel" ></Label>
             </StackPanel>
@@ -102,7 +102,7 @@
                     <ComboBoxItem>Hexagonal</ComboBoxItem>
                 </ComboBox>
                 <Label Content="Grains" />
-                <TextBox Name="Grains_TextBox" Margin="5" Text="{Binding GrainCount}"/>
+                <TextBox Name="Grains_TextBox" Margin="5" Text="{Binding GrainsCount}"/>
                 <Label Content="Space size" />
                 <TextBox Name="SpaceSize_TextBox" Margin="5" Text="{Binding SpaceSize}" />
                 <Button Name="GenerateButton" Grid.Column="0" Margin="5"  Command="{Binding Generate}" >Generate</Button>
