--- a/MsmGrainGrowthGui/MainWindow.xaml
+++ b/MsmGrainGrowthGui/MainWindow.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GrainGrowthGui"
         mc:Ignorable="d"
-        Title="Grain Growth Cellural Automata" Height="700" Width="800">
-    
+        Title="Grain Growth Cellural Automata" Height="800" Width="800">
+
     <Window.DataContext>
         <local:CelluralAutomatonViewModel />
     </Window.DataContext>
 
     <StackPanel>
         <DockPanel>
-        <!-- TODO: Send toolbar to seperate view/viewModel -->
+            <!-- TODO: Send toolbar to seperate view/viewModel -->
             <ToolBarTray DockPanel.Dock="Top">
                 <ToolBar>
                     <Button Command="{Binding Open}">
@@ -43,12 +43,13 @@
         </DockPanel>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
             <StackPanel>
-                <Border BorderThickness="1" BorderBrush="#FF000000">
-                    <Image Name="CelluralSpaceImage" Height="500" Width="500" Margin="5" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Unspecified"></Image>
+                <Border BorderThickness="1" BorderBrush="#FF000000" Height="500" Width="500" Margin="5">
+                    <Image Name="CelluralSpaceImage" MouseDown="CelluralSpaceImage_MouseDown"  Height="500" Width="500"  RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Unspecified"></Image>
                 </Border>
                 <TextBlock Margin="5"></TextBlock>
             </StackPanel>
@@ -74,9 +75,9 @@
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="0.9*" />
-                                <ColumnDefinition Width="1*" />
-                                <ColumnDefinition Width="1.6*" />
+                                <ColumnDefinition Width="46*" />
+                                <ColumnDefinition Width="37*" />
+                                <ColumnDefinition Width="55*" />
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="Count:"></Label>
                             <TextBox Name="InclusionsCountTextBox" Grid.Column="1" Margin="5,5,5,5" Text="{Binding InclusionsCount}" />
@@ -96,12 +97,12 @@
                     <TextBox Name="ThresholdTextBox" Margin="5" Text="{Binding Threshold}"/>
                 </StackPanel>
                 <StackPanel  Name="AutomatonOptionsStackPanel">
-                    
+
                     <Label Content="Boundary" />
                     <ComboBox Name="BoundaryComboBox"  Margin="5" ItemsSource="{Binding Path=Boundaries}"
                                                                     DisplayMemberPath="Name"
                                                                     SelectedValuePath="Name"
-                                                                    SelectedValue="{Binding Path=Boundary}" > 
+                                                                    SelectedValue="{Binding Path=Boundary}" >
                     </ComboBox>
                     <Label Content="Neighborhood" />
                     <ComboBox Name="NeighbourhoodComboBox" Margin="5" ItemsSource="{Binding Path=Neighbourhoods}"
@@ -120,7 +121,13 @@
                 <Button Margin="5" Padding="5" Name="RunButton" Command="{Binding Start}">Run</Button>
                 <Button Margin="5" Padding="5" Command="{Binding Stop}">Stop</Button>
                 <Button Margin="5" Padding="5" Command="{Binding Reset}">Reset</Button>
-
+                <Button Margin="5" Padding="5" Command="{Binding AddSecondPhase}">Add second phase</Button>
+                <Button Margin="5" Padding="5" Name="DeleteButton"  Command="{Binding DeleteGrain}">Delete selected grain</Button>
+                <Button Margin="5" Padding="5" Command="{Binding ShowBoundary}">Show boundary</Button>
+            </StackPanel>
+            <StackPanel Grid.Column="2">
+                <TextBlock TextWrapping="Wrap">List grains here with area, boundary lenght, color, id
+                </TextBlock>
             </StackPanel>
         </Grid>
 
